src/test/compile-fail/main-wrong-type-2.rs
fn main() -> char {
//!^ ERROR Wrong type in main function: found `native fn() -> char`
}
